--- a/html/zah/My Web/class.css
+++ b/html/zah/My Web/class.css
@@ -61,7 +61,7 @@ h2{
 .menu > li{
     color: white;
         background-color: hsl(240, 90%, 40%);
-        font-style: ;
+        font-style: bold ;
         font-size: 24px;
         flex-grow: 1;
         margin-right: 2px;
