--- a/html/philipp/myFirstWebSite/style.css
+++ b/html/philipp/myFirstWebSite/style.css
@@ -1,25 +1,19 @@
 .bgImage{
     background: url(img7.jpg);
-    background-size: cover;
+    background-size:cover;
     background-color: rgba(240, 240, 240, 0.463);
     background-blend-mode: soft-light;
-
 }
+
 .body{
-    text-indent:10%; 
+    margin-left: 170pt;
     font-size:110%; 
     font-family: 'Courier New', Courier, monospace;
-    
+    margin-right: 100pt;
 }
-a {
-    text-decoration: none;
-  }
-  
-a:hover {
-    text-decoration: underline brown;
-  }
 
 h1{
+    margin-top: 5.5%;
     font-size: 35pt;
 }
 
@@ -28,6 +22,16 @@ h2{
     margin-top: 20pt;
     margin-bottom: 10pt;
 }
+
+a {
+    color:brown;
+    text-decoration: none;
+  }
+  
+a:hover {
+    text-decoration: underline brown;
+  }
+
 h3{
     margin-top: 0%;
     margin-bottom: 0%;
@@ -46,3 +50,45 @@ body > img {
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
 }
+.logo{
+    width: 84pt;
+    position:fixed;
+    z-index: -1;
+    top:4%;
+    left:1cm;
+}
+nav {
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: fixed;
+    z-index: 1;
+    top:12%;
+    left:1cm;
+  }
+  nav > div {
+    width: 90pt;
+    color: black;
+    font-weight: 700;
+    font-size: 20pt;
+       
+  }
+  nav > div:hover {
+    text-align: right;
+  }
+ 
+#page-container {
+    position: relative;
+    min-height: 90%;
+  }
+  
+  #content-wrap {
+    padding-bottom: 0;    /* Footer height */
+  }
+  
+  #footer {
+    position: absolute;
+    bottom:0;
+    width: 100%;
+    height: 2%;            /* Footer height */
+  }
