--- a/html/cemil/my-son/style.css
+++ b/html/cemil/my-son/style.css
@@ -1,14 +1,21 @@
-h1,h2,h3,h4,h5,h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     text-align: center;
 }
 
-.redtext{
-    color:rgb(243, 8, 8) ;
+.redtext {
+    color: rgb(243, 8, 8);
 }
+
 .wichtig {
     font-weight: 700;
 }
-h1{
+
+h1 {
     color: rgb(0, 0, 0);
 }
 
@@ -16,41 +23,44 @@ h1{
     margin-left: 15%;
     width: 70%;
 }
-.whitetext{
+
+.whitetext {
     color: rgb(255, 255, 255);
 }
 
-.floatimg{
+.floatimg {
     float: left;
-    
-    
-      
-        
+
+
+
+
 }
-.backgroundfloat{
+
+.backgroundfloat {
     background-image: url(https://media0.giphy.com/media/Ah2YxX0t177pu/giphy-downsized-large.gif);
     background-repeat: round;
 }
-ul{
+
+ul {
     list-style-type: none;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
-    ul > li{
-        color:#000;
-        font-size: 20px;
-        flex-grow: 0;
-        border-style:solid ;
-        border-radius: 10px;
-        padding-left: 5px;
-        padding-right: 5px;
-        
-    }
-    ul > li:hover{
-        color: #900;
-        font-size: 150%;
-       
-    }
 
+ul>li {
+    color: #000;
+    font-size: 20px;
+    flex-grow: 0;
+    border-style: solid;
+    border-radius: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
 
+}
+
+ul>li:hover {
+    color: #900;
+    font-size: 150%;
+
+}
