--- a/html/aron/abschlussprojekt/gamecss/GameStyle.css
+++ b/html/aron/abschlussprojekt/gamecss/GameStyle.css
@@ -4,6 +4,7 @@ body {
 
     overflow: hidden;
     padding: 0.5%;
+    padding-top: 1%;
 
 }
 
@@ -66,9 +67,6 @@ body {
     border: 1px solid #451B61;
 
 }
-
-
-
 .btn-grid {
     grid-template-columns: auto;
 }
@@ -81,6 +79,7 @@ body {
     width: 100%;
     height: 100vh;
 }
+
 
 @media only screen and (max-width:930px) {
    
